DetailsView: Add support for ThemeExtras SettableCompletionStatus control

--- a/source/DefaultControls/ComboBox.xaml
+++ b/source/DefaultControls/ComboBox.xaml
@@ -128,4 +128,23 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+
+    <Style x:Key="ThemeExtrasUserControlCompStatusStyle" TargetType="UserControl">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ContentControl">
+                    <StackPanel Orientation="Horizontal">
+                        <ComboBox MinWidth="115"
+                                  ItemsSource="{Binding CompletionStatusOptions}" SelectedItem="{Binding Value}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate DataType="{x:Type CompletionStatus}">
+                                    <TextBlock Text="{Binding Name}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
