TopPanel: Add support for ThemeExtras navigation buttons

--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -38,6 +38,7 @@
     <sys:Int32 x:Key="GridViewSectionOrderCheckDlc">10</sys:Int32>
     <sys:Int32 x:Key="GridViewSectionOrderGameRelations">11</sys:Int32>
     <sys:Boolean x:Key="GridViewCoverZoomOnHover">True</sys:Boolean>
+    <sys:Boolean x:Key="ShowNavigationButtons">True</sys:Boolean>
     <!--region end-->
     
     <x:Static x:Key="EmptyString" Member="sys:String.Empty" />
