Change the default value in some theme options

--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -39,7 +39,7 @@
     <sys:Int32 x:Key="GridViewSectionOrderCheckDlc">11</sys:Int32>
     <sys:Int32 x:Key="GridViewSectionOrderGameRelations">12</sys:Int32>
     <sys:Int32 x:Key="GridViewSectionOrderSteamScreenshots">13</sys:Int32>
-    <sys:Boolean x:Key="GridViewCoverZoomOnHover">True</sys:Boolean>
+    <sys:Boolean x:Key="GridViewCoverZoomOnHover">False</sys:Boolean>
     <sys:Boolean x:Key="ShowNavigationButtons">True</sys:Boolean>
     <!--region end-->
     
