--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -11,6 +11,7 @@
     <HorizontalAlignment x:Key="DetailsViewBackgroundHorizontalAlignment">Left</HorizontalAlignment>
     <sys:Boolean x:Key="DetailsViewAllowUseOfLogos">true</sys:Boolean>
     <sys:Boolean x:Key="DetailsViewShowHltbDataGrid">true</sys:Boolean>
+    <sys:Boolean x:Key="DetailsViewEnablePanelsDropShadowEffect">False</sys:Boolean>
     <sys:Boolean x:Key="GridViewAllowUseOfLogos">true</sys:Boolean>
     <sys:Boolean x:Key="GridViewShowHltbDataGrid">true</sys:Boolean>
     <sys:Boolean x:Key="GridViewEnableCoverShineAnimation">true</sys:Boolean>
